Fixed aligns and fixed spelling and grammer errors in Report

--- a/Report/1Intro.tex
+++ b/Report/1Intro.tex
@@ -1,2 +1,2 @@
 \chapter{Introduction and Preliminaries}
-This report will detail the work done for the Numerical Modeling mathematics honors course. Whenever possible, decimal values will be calculated to double precision. Data will generally be stored in a $.dat$ which will then be read in and plotted. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem and then will look at Gordinov's method in order to simulate high resolution shock capturing in order to solve Burgers' equation.
+This report will detail the work done for the Numerical Modelling mathematics Honours course. Whenever possible, decimal values will be calculated to double precision. All figures in this report will be generated in MATLAB, with the code written by the author, Antonio Peters. The code, as well as the LaTeX files for this report can be found at \url{https://github.com/caramel-koala/Numerical-Modelling}. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem. We will then look at Flux Conservative and Reconstruction Algorithms. We will finally look at Slope Limiter Methods and use these to simulate high resolution shock capturing in order to solve Burgers' equation.
