--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -10,12 +10,13 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{fullpage}
+\usepackage{url}
 %-------------------------------------------------------------------------------
 %	TITLE SECTION
 %-------------------------------------------------------------------------------
 
 \title{
-\textsc{Numerical Modeling} \\ [25pt]
+\textsc{Numerical Modelling} \\ [25pt]
 \huge Semester Report \\ % The assignment title
 }
 
